Fixed some CSS on smaller viewports.

--- a/ui/src/app/components/wordlines/wordlines.component.css
+++ b/ui/src/app/components/wordlines/wordlines.component.css
@@ -69,7 +69,7 @@
 }
 
 .controls {
-    margin-top: 10px;
+    margin-top: 3px;
     color: black;
     max-width: 600px;
 }
@@ -155,12 +155,9 @@
     }
     
     .bag-tiles-remaining {
-        width: 3px;
+        width: 2px;
     }
-
-    .controls {
-        margin-top: 15px;
-    }
+    
 }
 
 @media (min-width: 480px) {
@@ -194,6 +191,10 @@
 
     .tiles-remaining-player {
         width: 10px;
+    }
+
+    .controls {
+        margin-top: 15px;
     }
 }
 
